# chat-with-your-data-solution-accelerator

./: .env.sample  .gitignore  Makefile  README.md  azure.yaml  pyproject.toml
.github/: copilot-instructions.md
code/: create_app.py
docker/: Dockerfile.backend  Dockerfile.ci-validate  Dockerfile.frontend  Dockerfile.functions  ci-entrypoint.sh  docker-compose.dev.yml  docker-compose.smoke.yml
docs/: AVMPostDeploymentGuide.md  LOCAL_DEPLOYMENT.md  LocalDevelopmentSetup.md  LogAnalyticsReplicationDisable.md  QuotaCheck.md  TroubleShootingSteps.md  admin.md  architecture.md  azure_app_service_auth_setup.md  azure_openai_model_quota_settings.md  best_practices.md  chat_history.md  contract_assistance.md  create_new_app_registration.md  customer_truth.md  (+12 more)
src/functions/: function_app.py  local.settings.json  pyproject.toml
src/functions/add_url/: __init__.py  blueprint.py  handler.py  url_fetcher.py
src/functions/batch_push/: __init__.py  blob_fetcher.py  blueprint.py  handler.py  queue_reader.py
src/functions/batch_start/: __init__.py  blob_listing.py  blueprint.py  handler.py  models.py  queue_writer.py
src/functions/blob_event/: __init__.py  blueprint.py  event_parser.py  handler.py
src/functions/core/: __init__.py  contracts.py  exception_mapping.py  http.py  pgvector_pool.py  search_resolution.py  storage_clients.py  storage_endpoints.py  telemetry.py
src/functions/core/parsers/: _instance.py  document_intelligence_parser.py  html_parser.py  registry.py  text_parser.py
src/functions/search_skill/: __init__.py  blueprint.py  handler.py  models.py
(+375 files in other folders)
